; ModuleID = '/home/carl/AnghaBench/git/extr_commit-graph.c_find_commit_in_graph.c'
source_filename = "/home/carl/AnghaBench/git/extr_commit-graph.c_find_commit_in_graph.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.commit = type { i64, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.commit_graph = type { i64, %struct.commit_graph* }

@COMMIT_NOT_FROM_GRAPH = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.commit*, %struct.commit_graph*, i64*)* @find_commit_in_graph to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @find_commit_in_graph(%struct.commit* %0, %struct.commit_graph* %1, i64* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.commit*, align 8
  %6 = alloca %struct.commit_graph*, align 8
  %7 = alloca i64*, align 8
  %8 = alloca %struct.commit_graph*, align 8
  %9 = alloca i64, align 8
  store %struct.commit* %0, %struct.commit** %5, align 8
  store %struct.commit_graph* %1, %struct.commit_graph** %6, align 8
  store i64* %2, i64** %7, align 8
  %10 = load %struct.commit*, %struct.commit** %5, align 8
  %11 = getelementptr inbounds %struct.commit, %struct.commit* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* @COMMIT_NOT_FROM_GRAPH, align 8
  %14 = icmp ne i64 %12, %13
  br i1 %14, label %15, label %20

15:                                               ; preds = %3
  %16 = load %struct.commit*, %struct.commit** %5, align 8
  %17 = getelementptr inbounds %struct.commit, %struct.commit* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = load i64*, i64** %7, align 8
  store i64 %18, i64* %19, align 8
  store i32 1, i32* %4, align 4
  br label %50

20:                                               ; preds = %3
  %21 = load %struct.commit_graph*, %struct.commit_graph** %6, align 8
  store %struct.commit_graph* %21, %struct.commit_graph** %8, align 8
  br label %22

22:                                               ; preds = %35, %20
  %23 = load %struct.commit_graph*, %struct.commit_graph** %8, align 8
  %24 = icmp ne %struct.commit_graph* %23, null
  br i1 %24, label %25, label %33

25:                                               ; preds = %22
  %26 = load %struct.commit_graph*, %struct.commit_graph** %8, align 8
  %27 = load %struct.commit*, %struct.commit** %5, align 8
  %28 = getelementptr inbounds %struct.commit, %struct.commit* %27, i32 0, i32 1
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i32 0, i32 0
  %30 = call i32 @bsearch_graph(%struct.commit_graph* %26, i32* %29, i64* %9)
  %31 = icmp ne i32 %30, 0
  %32 = xor i1 %31, true
  br label %33

33:                                               ; preds = %25, %22
  %34 = phi i1 [ false, %22 ], [ %32, %25 ]
  br i1 %34, label %35, label %39

35:                                               ; preds = %33
  %36 = load %struct.commit_graph*, %struct.commit_graph** %8, align 8
  %37 = getelementptr inbounds %struct.commit_graph, %struct.commit_graph* %36, i32 0, i32 1
  %38 = load %struct.commit_graph*, %struct.commit_graph** %37, align 8
  store %struct.commit_graph* %38, %struct.commit_graph** %8, align 8
  br label %22

39:                                               ; preds = %33
  %40 = load %struct.commit_graph*, %struct.commit_graph** %8, align 8
  %41 = icmp ne %struct.commit_graph* %40, null
  br i1 %41, label %42, label %49

42:                                               ; preds = %39
  %43 = load i64, i64* %9, align 8
  %44 = load %struct.commit_graph*, %struct.commit_graph** %8, align 8
  %45 = getelementptr inbounds %struct.commit_graph, %struct.commit_graph* %44, i32 0, i32 0
  %46 = load i64, i64* %45, align 8
  %47 = add nsw i64 %43, %46
  %48 = load i64*, i64** %7, align 8
  store i64 %47, i64* %48, align 8
  store i32 1, i32* %4, align 4
  br label %50

49:                                               ; preds = %39
  store i32 0, i32* %4, align 4
  br label %50

50:                                               ; preds = %49, %42, %15
  %51 = load i32, i32* %4, align 4
  ret i32 %51
}

declare dso_local i32 @bsearch_graph(%struct.commit_graph*, i32*, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
